@@ -2,20 +2,25 @@
 
 ACLOCAL_AMFLAGS=-I gl/m4
 EXTRA_DIST=paperkey.spec $(man_MANS)
-SUBDIRS=gl . checks
+SUBDIRS=gl .
 
 AM_CPPFLAGS=-I$(top_srcdir)/gl
 LDADD=gl/libgl.a
-
-if USING_GCC
-AM_CPPFLAGS+=-Wall -W -pedantic
-endif
 
 man_MANS=paperkey.1
 
 bin_PROGRAMS=paperkey
 
 paperkey_SOURCES=paperkey.c packets.c packets.h parse.c parse.h extract.c extract.h restore.c restore.h output.c output.h
+
+if USING_GCC
+AM_CPPFLAGS+=-Wall -W -pedantic
+endif
+
+# Only do the self test if we're not cross compiling
+if !CROSS_COMPILING
+SUBDIRS+=checks
+endif
 
 if MINGW32_BUILD
 EXTRA_DIST+=README.WIN32 paperkey.txt paperkey.exe
